ombi/ombi.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: ombi
  labels:
    app: ombi
spec:
  selector:
    app: ombi
  ports:
  - name: http
    port: 80
    targetPort: 3579
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: ombi
spec:
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: linuxserver/ombi:v3.0.4892-ls38
        ports:
        - name: http
          containerPort: 3579
        readinessProbe:
          httpGet:
            path: /login
            port: 3579
          periodSeconds: 3
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /login
            port: 3579
          timeoutSeconds: 10
          failureThreshold: 10
          initialDelaySeconds: 60
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
