ombi/service-entries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.pushbullet.com
  namespace: ombi
spec:
  hosts:
  - api.pushbullet.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: plex.tv
  namespace: ombi
spec:
  hosts:
  - plex.tv
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dippystreams.co.uk
  namespace: ombi
spec:
  hosts:
  - dippystreams.co.uk
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: webservice.fanart.tv
  namespace: ombi
spec:
  hosts:
  - webservice.fanart.tv
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: raw.githubusercontent.com
  namespace: ombi
spec:
  hosts:
  - raw.githubusercontent.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.github.com
  namespace: ombi
spec:
  hosts:
  - api.github.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.trakt.tv
  namespace: ombi
spec:
  hosts:
  - api.trakt.tv
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: https
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.tvmaze.com
  namespace: ombi
spec:
  hosts:
  - api.tvmaze.com
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api.themoviedb.org
  namespace: ombi
spec:
  hosts:
  - api.themoviedb.org
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cert.int-x3.letsencrypt.org
  namespace: ombi
spec:
  hosts:
  - cert.int-x3.letsencrypt.org
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
