ombi/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ombi
  namespace: ombi
spec:
  hosts:
  - requests.dippystreams.co.uk
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - port: 8443
    route:
    - destination:
        host: ombi
